# llm-context

./: README.md  llmcontext.py  pyproject.toml
tests/e2e/: README.md  run_tests.py  test_examples.py  test_runner.py
tests/e2e/test_scenarios/binary_files/: script.py  text_file.txt
tests/e2e/test_scenarios/edge_cases/: file with spaces.txt  special-chars_&_symbols!@#$.txt  unicode_file.txt  very_long_filename_that_tests_the_systems_ability_to_handle_extremely_long_filenames_without_issues.txt
tests/e2e/test_scenarios/nested_ignore_complex/: .gitignore  .llmignore  data.backup  internal.md  main.py
tests/e2e/test_scenarios/nested_ignore_complex/private/: secret.txt
tests/e2e/test_scenarios/nested_ignore_complex/src/: .gitignore  .llmignore  app.py  internal.md  old_data.backup
tests/e2e/test_scenarios/nested_ignore_complex/src/utils/: .gitignore  helpers.py
tests/e2e/test_scenarios/nested_ignore_complex/src/utils/deep/: config.secret
tests/e2e/test_scenarios/nested_structure/: .gitignore
tests/e2e/test_scenarios/nested_structure/src/api/: handlers.py
tests/e2e/test_scenarios/nested_structure/src/core/: engine.py
tests/e2e/test_scenarios/nested_structure/src/utils/: helpers.py
tests/e2e/test_scenarios/nested_structure/tests/: .gitignore  test_engine.py
tests/e2e/test_scenarios/simple_project/: README.md  config.json  main.py  utils.py
tests/e2e/test_scenarios/simple_project/data/: sample.txt
tests/e2e/test_scenarios/with_gitignore/: .gitignore  app.py  input.txt
tests/e2e/test_scenarios/with_llmignore/: .llmignore  INTERNAL_NOTES.md  large_data.csv  main.py  public_readme.md
