[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llmcontext"
version = "1.0.0"
description = "A Python tool that recursively scans directories and formats file contents for LLM analysis"
readme = "README.md"
requires-python = ">=3.6"
license = "MIT"
authors = [
    {name = "LLMContext Contributors"}
]
keywords = ["llm", "context", "files", "ai", "code-analysis"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development",
    "Topic :: Text Processing",
]
dependencies = [
    "pathspec>=0.9.0"
]

[project.urls]
Homepage = "https://github.com/yourusername/llmcontext"
Documentation = "https://github.com/yourusername/llmcontext#readme"
Repository = "https://github.com/yourusername/llmcontext.git"
Issues = "https://github.com/yourusername/llmcontext/issues"

[project.scripts]
llmcontext = "llmcontext:main"

[tool.hatch.build.targets.wheel]
packages = ["llmcontext.py"]

[tool.hatch.build.targets.sdist]
include = [
    "llmcontext.py",
    "README.md",
    "pyproject.toml",
]